--- a/style.css
+++ b/style.css
@@ -18,36 +18,36 @@ body{
     width: 350px;
     border-radius: 10px;
     padding: 30px 20px;
-    background: url(R.jpg) no-repeat center/cover;
+    background: url(/img/warm.jpg) no-repeat center/cover;
 }
 
 .hot{
-    background: linear-gradient(to top,rgba(0,0,0,0.8),rgba(0,0,0,0.6)), url(warm.jpg) no-repeat center/cover ;
+    background: linear-gradient(to top,rgba(0,0,0,0.8),rgba(0,0,0,0.6)), url(/img/warm.jpg) no-repeat center/cover ;
 }
 
 .hot .weather{
-    background: url(warm.jpg) no-repeat center/cover;
+    background: url(/img/warm.jpg) no-repeat center/cover;
 }
 .cold{
-    background: linear-gradient(to top,rgba(0,0,0,0.8),rgba(0,0,0,0.6)), url(R.jpg) no-repeat center/cover ;
+    background: linear-gradient(to top,rgba(0,0,0,0.8),rgba(0,0,0,0.6)), url(/img/winter.jpg) no-repeat center/cover ;
 }
 
 .cold .weather{
-    background: url(R.jpg) no-repeat center/cover;
+    background: url(/img/winter.jpg) no-repeat center/cover;
 }
 .cool{
-    background: linear-gradient(to top,rgba(0,0,0,0.8),rgba(0,0,0,0.6)), url(R.jpg) no-repeat center/cover ;
+    background: linear-gradient(to top,rgba(0,0,0,0.8),rgba(0,0,0,0.6)), url(/img/winter.jpg) no-repeat center/cover ;
 }
 
 .cool .weather{
-    background: url(R.jpg) no-repeat center/cover;
+    background: url(/img/winter.jpg) no-repeat center/cover;
 }
 .warm{
-    background: linear-gradient(to top,rgba(0,0,0,0.8),rgba(0,0,0,0.6)), url(warm.jpg) no-repeat center/cover ;
+    background: linear-gradient(to top,rgba(0,0,0,0.8),rgba(0,0,0,0.6)), url(/img/warm.jpg) no-repeat center/cover ;
 }
 
 .warm .weather{
-    background: url(warm.jpg) no-repeat center/cover;
+    background: url(/img/warm.jpg) no-repeat center/cover;
 }
 
 .search{
