--- a/style.css
+++ b/style.css
@@ -29,18 +29,18 @@ body{
     background: url(img/warm.jpg) no-repeat center/cover;
 }
 .cold{
-    background: linear-gradient(to top,rgba(0,0,0,0.8),rgba(0,0,0,0.6)), url(/img/winter.jpg) no-repeat center/cover ;
+    background: linear-gradient(to top,rgba(0,0,0,0.8),rgba(0,0,0,0.6)), url(img/winter.jpg) no-repeat center/cover ;
 }
 
 .cold .weather{
-    background: url(/img/winter.jpg) no-repeat center/cover;
+    background: url(img/winter.jpg) no-repeat center/cover;
 }
 .cool{
-    background: linear-gradient(to top,rgba(0,0,0,0.8),rgba(0,0,0,0.6)), url(/img/winter.jpg) no-repeat center/cover ;
+    background: linear-gradient(to top,rgba(0,0,0,0.8),rgba(0,0,0,0.6)), url(img/winter.jpg) no-repeat center/cover ;
 }
 
 .cool .weather{
-    background: url(/img/winter.jpg) no-repeat center/cover;
+    background: url(img/winter.jpg) no-repeat center/cover;
 }
 .warm{
     background: linear-gradient(to top,rgba(0,0,0,0.8),rgba(0,0,0,0.6)), url(img/warm.jpg) no-repeat center/cover ;
